added a slider to the main page

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,10 +1,24 @@
 <section class="hero">
-  <h2 class="white-text">Интернет магазин одежды</h2>
-  <h4 class="light white-text">Представьте себе гардероб, в котором собрано более 2 000 000 модных товаров
-  </h4>
-  <div class="buttons">
-    <a class="waves-effect waves-grey btn-flat white btn">Каталог</a>
-    <a class="waves-effect waves-grey btn-flat white btn">Помощь</a>
+  <div #slider class="slider">
+    <ul class="slides">
+      <li>
+        <img src="../../assets/img/people-2571611_1920.jpg">
+        <div class="caption center-align">
+          <h2 class="">Интернет магазин одежды</h2>
+          <h4 class="light">Представьте себе гардероб, в котором собрано более 2 000 000 модных товаров</h4>
+          <a class="waves-effect waves-grey btn-flat white btn">Каталог</a>
+          <a class="waves-effect waves-grey btn-flat white btn">Помощь</a>
+        </div>
+      </li>
+      <li>
+        <img src="../../assets/img/beautiful.jpg">
+        <div class="caption center-align">
+          <h2 class="">Новинки и акции!</h2>
+          <h4 class="light">Заказый товар по самой выгодной цене</h4>
+          <a class="waves-effect waves-grey btn-flat white btn">Новинки</a>
+        </div>
+      </li>
+    </ul>
   </div>
 </section>
 
