added category page

--- a/src/app/shared/layouts/store-layout/store-layout.component.html
+++ b/src/app/shared/layouts/store-layout/store-layout.component.html
@@ -8,7 +8,9 @@
       <ul class="right hide-on-med-and-down" id="nav-mobile">
 
         <li><a href="">О нас</a></li>
-        <li><a href="">Каталог</a></li>
+        <li routerLinkActive="active">
+          <a routerLink="/categories">Каталог</a>
+        </li>
         <li><a href="">Новинки</a></li>
         <li><a href="">Акции</a></li>
         <li><a href="">Доставка</a></li>
