implemented position change / creation (frontend) + added delivery page

--- a/src/app/admin/assortment-page/assortment-form/assortment-form.component.html
+++ b/src/app/admin/assortment-page/assortment-form/assortment-form.component.html
@@ -5,7 +5,11 @@
     {{isNew ? 'Добавить' : 'Редактировать'}} категорию
   </h4>
   <span>
-            <button class="btn btn-small red">
+            <button
+              (click)="deleteCategory()"
+              *ngIf="!isNew"
+              class="btn btn-small red"
+            >
               <i class="material-icons">delete</i>
             </button>
           </span>
@@ -60,4 +64,8 @@
   </div>
 </form>
 
-<app-positions-form></app-positions-form>
+<app-positions-form
+  *ngIf="category?._id"
+  [categoryId]="category._id"
+>
+</app-positions-form>
