--- a/src/app/admin/assortment-page/assortment-form/positions-form/positions-form.component.sass
+++ b/src/app/admin/assortment-page/assortment-form/positions-form/positions-form.component.sass
@@ -5,7 +5,15 @@
   cursor: pointer
 
 #create-modal
-  max-width: 500px
+  max-width: 600px
+  min-height: 600px
 
 .material-icons:hover
   color: red
+
+.dn
+  display: none
+
+.df
+  display: flex
+  justify-content: space-between
