--- a/src/app/admin/assortment-page/assortment-form/positions-form/positions-form.component.html
+++ b/src/app/admin/assortment-page/assortment-form/positions-form/positions-form.component.html
@@ -2,39 +2,128 @@
   <div class="col s12">
     <div class="page-subtitle">
       <h4>Позиции:</h4>
-      <button class="waves-effect waves-light btn brown darken-1 btn-small modal-trigger" data-target="create-modal">
+      <button
+        (click)="onAddPosition()"
+        class="waves-effect waves-light btn brown darken-1 btn-small"
+        type="button"
+      >
+
         Добавить позицию
       </button>
     </div>
-
-    <div class="collection">
-      <a class="collection-item collection-item-icon">
+    <div *ngIf="!loading; else loader">
+      <div *ngIf="positions.length !== 0; else empty" class="collection">
+        <a
+          (click)="onSelectPosition(position)"
+          *ngFor="let position of positions"
+          class="collection-item collection-item-icon"
+        >
         <span>
-          Кофе <strong>20 руб.</strong>
+          {{position.name}} <strong>{{position.cost}}</strong>
         </span>
-        <span>
-          <i class="material-icons">delete</i>
+          <span>
+          <i (click)="onDeletePosition($event, position)" class="material-icons">delete</i>
         </span>
-      </a>
+        </a>
+      </div>
+      <ng-template #empty>
+        <div class="center">Позиций нет</div>
+      </ng-template>
     </div>
+    <ng-template #loader>
+      <app-loader></app-loader>
+    </ng-template>
   </div>
 </div>
 
+<form
+  (ngSubmit)="onSubmit()"
+  [formGroup]="form"
+>
+  <div #modal class="modal">
+    <div class="modal-content">
+      <h4 class="mb1">{{positionId ? 'Изменить' : 'Добавить'}} позицию</h4>
+      <div class="input-field">
+        <input
+          [ngClass]="{'invalid': form.get('name').invalid && form.get('name').touched}"
+          formControlName="name"
+          id="pos-name"
+          type="text"
+        >
+        <label for="pos-name">Название</label>
+        <span
+          *ngIf="form.get('name').invalid && form.get('name').touched"
+          class="helper-text red-text"
+        >
+          Название не должно быть пустым
+        </span>
+      </div>
+      <div class="input-field">
+        <input
+          [ngClass]="{'invalid': form.get('description').invalid && form.get('description').touched}"
+          formControlName="description"
+          id="pos-description"
+          type="text"
+        >
+        <label for="pos-description">Описание</label>
+        <span
+          *ngIf="form.get('description').invalid && form.get('description').touched"
+          class="helper-text red-text"
+        >
+          Описание не должно быть пустым
+        </span>
 
-<div class="modal" id="create-modal">
-  <div class="modal-content">
-    <h4 class="mb1">Добавить позицию</h4>
-    <div class="input-field">
-      <input id="pos-name" required type="text">
-      <label for="pos-name">Название</label>
+      </div>
+      <div class="input-field">
+        <input
+          [ngClass]="{'invalid': form.get('cost').invalid && form.get('cost').touched}"
+          formControlName="cost"
+          id="pos-cost"
+          type="number"
+        >
+        <label for="pos-cost">Цена</label>
+        <span
+          *ngIf="form.get('cost').invalid && form.get('cost').touched"
+          class="helper-text red-text"
+        >
+          введите корректную цену
+        </span>
+      </div>
+      <div class="input-field df">
+
+        <input
+            #input
+            (change)="onFileUpload($event)"
+            class="dn"
+            formControlName="image"
+            id="pos-image"
+            type="file"
+        >
+        <button
+          (click)="triggerClick()"
+          class="waves-effect waves-light btn orange lighten-2 mb2"
+          type="button"
+        >
+          <i class="material-icons left">backup</i>
+          Загрузить изображение
+        </button>
+        <img
+          *ngIf="imagePreview"
+          [src]="imagePreview"
+          height="150"
+          width="150"
+        >
+        <span
+          *ngIf="form.get('image').invalid && form.get('image').touched"
+          class="helper-text red-text"
+        >
+          Загрузите картинку
+        </span>
+      </div>
     </div>
-    <div class="input-field">
-      <input id="pos-cost" required type="text">
-      <label for="pos-cost">Цена</label>
+    <div class="modal-footer">
+      <a (click)="onCancel()" class="modal-action waves-effect waves-black btn-flat">Отмена</a>
+      <button class="modal-action btn waves-effect" type="submit">Сохранить</button>
     </div>
   </div>
-  <div class="modal-footer">
-    <a class="modal-action waves-effect waves-black btn-flat" href="#!">Отмена</a>
-    <button class="modal-action btn waves-effect">Сохранить</button>
-  </div>
-</div>
+</form>
