--- a/src/app/shared/layouts/store-layout/store-layout.component.html
+++ b/src/app/shared/layouts/store-layout/store-layout.component.html
@@ -13,7 +13,7 @@
         </li>
         <li><a href="">Новинки</a></li>
         <li><a href="">Акции</a></li>
-        <li><a href="">Доставка</a></li>
+        <li><a routerLink="/delivery">Доставка</a></li>
         <li><a href="">Контакты</a></li>
         <li
           *ngIf="!auth.isAuthenticated()"
