--- a/src/app/shared/layouts/store-layout/store-layout.component.html
+++ b/src/app/shared/layouts/store-layout/store-layout.component.html
@@ -7,7 +7,9 @@
 
       <ul class="right hide-on-med-and-down" id="nav-mobile">
 
-        <li><a href="">О нас</a></li>
+        <li routerLinkActive="active">
+          <a routerLink="/home">О нас</a>
+        </li>
         <li routerLinkActive="active">
           <a routerLink="/categories">Каталог</a>
         </li>
