--- a/src/app/categories-page/categories-page.component.sass
+++ b/src/app/categories-page/categories-page.component.sass
@@ -1,24 +1,27 @@
 .container-fluid
   padding: 0 5rem
 
-.card-content
-  display: flex
-  flex-direction: column
-  padding: 1.5rem
-
-
-.card-content span
-  font-size: 1.5rem
-  line-height: 32px
-  font-weight: 300
-  margin-bottom: 5px
-
 .row
   margin-top: 2rem
   margin-bottom: 1rem
 
-.card-image
+.card
+
+  &-content
+    display: flex
+    flex-direction: column
+    padding: 1.5rem
+
+    span
+      font-size: 1.5rem
+      line-height: 32px
+      font-weight: 300
+      margin-bottom: 5px
+
+  &-image
   cursor: pointer
+
+
 
 
 
