--- a/src/app/delivery-page/delivery-page.component.html
+++ b/src/app/delivery-page/delivery-page.component.html
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="container-fluid">
   <h2>Доставка и оплата</h2>
   <div class="info">
     <p>Оплатить свой заказ вы можете в разделе «Корзина», выбрав соответствующий товар.</p>
