--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,3 +1,6 @@
 @import "~materialize-css/dist/css/materialize.min.css"
 @import "~quill/dist/quill.core.css"
 @import "~quill/dist/quill.snow.css"
+@import "app/app.component"
+
+
