--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -6,8 +6,8 @@
         <div class="caption center-align">
           <h2 class="">Интернет магазин одежды</h2>
           <h4 class="light">Представьте себе гардероб, в котором собрано более 2 000 000 модных товаров</h4>
-          <a class="waves-effect waves-grey btn-flat white btn">Каталог</a>
-          <a class="waves-effect waves-grey btn-flat white btn">Помощь</a>
+          <a class="waves-effect waves-grey btn-flat white btn" routerLink="/categories">Каталог</a>
+          <a class="waves-effect waves-grey btn-flat white btn" routerLink="/contacts">Помощь</a>
         </div>
       </li>
       <li>
@@ -15,7 +15,7 @@
         <div class="caption center-align">
           <h2 class="">Новинки и акции!</h2>
           <h4 class="light">Заказый товар по самой выгодной цене</h4>
-          <a class="waves-effect waves-grey btn-flat white btn">Новинки</a>
+          <a class="waves-effect waves-grey btn-flat white btn" routerLink="/stokcs">Акции</a>
         </div>
       </li>
     </ul>
