--- a/src/app/user-orders-page/user-orders-page.component.html
+++ b/src/app/user-orders-page/user-orders-page.component.html
@@ -1,10 +1,6 @@
 <div class="container-fluid">
   <h2>Мои заказы</h2>
+  <app-order></app-order>
 </div>
 
 
-<ng-template #empty>
-  <div class="center">
-    Заказов нет
-  </div>
-</ng-template>
