--- a/src/app/admin/admin-dashboard-page/admin-dashboard-page.component.html
+++ b/src/app/admin/admin-dashboard-page/admin-dashboard-page.component.html
@@ -13,7 +13,8 @@
 
 
   <li class="bold last">
-    <a (click)="auth.adminLogout()" class="waves-effect waves-orange">Выйти</a>
+    <a (click)="auth.adminLogout()"
+       class="waves-effect waves-orange">Выйти</a>
   </li>
 </ul>
 
