--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -5,3 +5,10 @@
   padding: 0rem 5rem
   padding-bottom: 2rem
   width: 1500px
+
+
+@media (max-width: 1400px)
+  .container-fluid
+    padding: 0rem 2em
+    padding-bottom: 2rem
+    width: 1200px
