--- a/src/app/contacts-page/contacts-page.component.html
+++ b/src/app/contacts-page/contacts-page.component.html
@@ -1,7 +1,12 @@
 <div class="container-fluid">
-  <h2>Контактная информация</h2>
-  <p>По вопросам работы с магазином (заказы, товар, доставка, регистрация и прочее) воспользуйтесь месседжерами, скайпом
-    или электронной почтой.</p>
+  <div class="contacts">
+    <h2>Наши контакты</h2>
+    <p>г. Бобруйск, Советская 7</p>
+    <p><a href="tel:+7 (495) 123-45-67">+7 (495) 123-45-67</a></p>
+    <p><a href="mailto:info@site.com">ikloaStore.com</a></p>
+    <p>По вопросам работы с магазином (заказы, товар, доставка, регистрация и прочее) воспользуйтесь месседжерами, скайпом
+      или электронной почтой.</p>
+  </div>
 </div>
 
 
